add readme, tweak layout and routes

--- a/app/components/layout.less
+++ b/app/components/layout.less
@@ -13,15 +13,18 @@ body {
   background: orange;
 }
 
-[role="menu-item"], [role="menu-item"] button {
+[role="menu-item"], [role="menu-item"] a, [role="menu-item"] button {
   text-decoration: none;
   border: none;
   list-style: none;
   display: inline-block;
-  padding: 1em;
-  margin: .5em;
+  font-size: 1em;
+  display: inline-block;
+  padding: .5em 1em;
+  margin: 0 .5em;
+  cursor: pointer;
+  color: white;
   background-color: #636379;
-
 }
 
 .list {
